--- a/templates/index.html
+++ b/templates/index.html
@@ -61,6 +61,7 @@
                         console.error('Error parsing JSON:', e);
                     }
                 } else if (event.data instanceof ArrayBuffer) {
+                    console.log('ArrayBuffer');
                     let arrayBuffer = event.data;
                     let blob = new Blob([arrayBuffer], { type: 'image/jpeg' });
                     let url = URL.createObjectURL(blob);
