--- a/templates/index.html
+++ b/templates/index.html
@@ -49,6 +49,7 @@
             if (typeof event.data === 'string') {
                 try {
                     let recognitionResults = JSON.parse(event.data);
+                    console.log(recognitionResults);
                     resultsDiv.innerHTML = '';
                     if (Array.isArray(recognitionResults?.predictions) && recognitionResults.predictions.length > 0) {
                         recognitionResults.predictions.forEach(prediction => {
@@ -66,7 +67,6 @@
             } else if (event.data instanceof Object) {
                 console.log('ArrayBuffer received');
                 let arrayBuffer = event.data;
-                console.log(event.data);
                 let blob = new Blob([arrayBuffer], { type: 'image/jpeg' });
                 let url = URL.createObjectURL(blob);
                 videoFrame.src = url;
