--- a/templates/index.html
+++ b/templates/index.html
@@ -60,6 +60,7 @@
                 const now = Date.now();
                 if (now - lastUpdate < minUpdateInterval) return;
                 const url = URL.createObjectURL(event.data);
+                console.log(url);
                 videoFrame.src = url;
                 lastUpdate = now;
             };
