--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -61,7 +61,7 @@
                 const now = Date.now();
                 if (now - lastUpdate < minUpdateInterval) return;
                 console.log('event.data: ', event.data);
-                const url = URL.createObjectURL(event.data);
+                const url = URL.createObjectURL(event.data.frame);
                 console.log(url);
                 videoFrame.src = url;
                 lastUpdate = now;
